# secretsauce

./: .env.example  .env.staging  .gitignore  CLAUDE.md  DEPLOY.md  PLAN.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml
backend/: .coverage  .env.example  CLAUDE.md  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 21a00d8af3b0_create_recipes_tables.py  88e6abc70626_shopping_list_standalone.py  9a4778a26e60_add_search_vector_to_recipe_versions.py  9dba554eadfe_add_import_tasks_table.py  a1b2c3d4e5f6_phase5_meal_planning.py  a3f7c9d21e45_drop_created_by_from_recipe_versions.py  b1c2d3e4f5a6_make_import_task_url_nullable_add_image_path.py  c7d8e9f0a1b2_add_shopping_lists.py  d4e5f6a7b8c9_add_admin_tables.py  e1f2a3b4c5d6_timeline_entries_user_id.py  ee860fc44629_create_users_table.py  f2a3b4c5d6e7_merge_search_vector_into_main.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  constants.py  database.py  logging.py  rate_limit.py  security.py
backend/app/models/: admin.py  import_task.py  meal_plan.py  recipe.py  shopping_list.py  user.py
backend/app/schemas/: admin.py  ai_responses.py  import_task.py  meal_plan.py  recipe.py  shopping_list.py  timeline.py  user.py
backend/app/services/: admin.py  ai_service.py  meal_log_service.py  meal_plan_service.py  meal_suggestion_service.py  recipe_import_service.py  recipe_service.py  shopping.py  shortlist_service.py
backend/tests/: conftest.py  test_health.py  test_security_setup.py  test_user_model.py  test_user_schemas.py
(+188 files in other folders)
